@@ -488,7 +488,7 @@ def offer_configuration(options):
             'If you need to use a different port than default, use the '
             '<host>:<port> alternative format. '
             'Just press ENTER if you don\'t have one or don\'t know.',
-            options=opts, force_prompt=True)
+            options=opts, empty_ok=True, force_prompt=True)
         if smtphost:
             stupidmode = False
     else:
@@ -498,7 +498,7 @@ def offer_configuration(options):
         smtpuser = ui.get_string(
             ('If you need to use a user name to send email via "%s" on your '
              'computer, please enter that user name.  Just press ENTER if you '
-             'don\'t need a user name.' % smtphost), force_prompt=True)
+             'don\'t need a user name.' % smtphost), empty_ok=True, force_prompt=True)
     else:
         smtpuser = ''
     
@@ -1276,7 +1276,7 @@ class UI(object):
             if not (isvirtual or notatty):
                 pkgversion = ui.get_string('Please enter the version of the '
                                            'package this report applies to '
-                                           '(blank OK)', force_prompt=True)
+                                           '(blank OK)', empty_ok=True, force_prompt=True)
         elif (check_available and not (self.options.kudos or notatty or self.options.offline)
               and state == 'installed' and bts == 'debian'):
             arch = utils.get_arch()
@@ -1547,7 +1547,7 @@ For more details, please see: http://www.debian.org/devel/wnpp/''')
             subject = ui.get_string(
                 'Your description is a bit long; please enter a shorter subject. '
                 '(An empty response will retain the existing subject.)',
-                force_prompt=True) or subject
+                empty_ok=True, force_prompt=True) or subject
         if package != 'wnpp' and prompted and mode < MODE_EXPERT:
             if foundfile:
                 subject = foundfile + ": " + subject
